# Chinfusor

./: LICENSE  README.md  changelog.md  changelog_sk.md  readme_sk.md
src/chinfusor-rs/: Cargo.toml  basic_conf  basic_conf_2  settings.csv
src/chinfusor-rs/chinfusor/: Cargo.toml
src/chinfusor-rs/chinfusor/src/: lib.rs  main.rs
src/chinfusor-rs/text_processor/: Cargo.toml
src/chinfusor-rs/text_processor/src/: lib.rs
src/chinfusor_recording_activator/: Cargo.toml
src/chinfusor_recording_activator/src/: main.rs
src/sd_chinfusor/: Cargo.toml
src/sd_chinfusor/benches/: text_processor_benchmarks.rs
src/sd_chinfusor/src/: lib.rs  main.rs  text_processor.rs
src/speech_dispatcher_cli/: Cargo.toml
src/speech_dispatcher_cli/src/: main.rs
