[package]
name = "sd_chinfusor"
license="MIT"
version = "1.2.0"
authors = ["Rastislav Kiss rastislav.kish@gmail.com"]
edition = "2018"
description = "A speech-dispatcher module allowing multialphabetical texts to be read properly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static="1.4.0"
notify="5.0.0-pre.3"
regex="1.3.9"
subprocess="0.2.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "text_processor_benchmarks"
harness = false

