[package]
name = "sd_chinfusor"
license="MIT"
version = "1.2.0"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
edition = "2021"
description = "A speech-dispatcher module allowing multialphabetical texts to be read properly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static="1.4.0"
notify="6.0.1"
regex="1.9.1"
subprocess="0.2.9"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "text_processor_benchmarks"
harness = false

