[package]
name = "chinfusor"
license = "MIT"
version = "0.1.0"
authors = ["Rastislav Kiss rastislav.kish@gmail.com"]
edition = "2018"
description = "A speech-dispatcher module allowing multialphabetical texts to be read correctly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

subprocess="0.2.4"
text_processor={path="../text_processor"}

